--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Zvířecí zvuky</title>
+	<title>Animal Farm</title>
 	<link href="https://fonts.googleapis.com/css?family=Paytone+One&amp;subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
